--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
     width: 30px;
     border: 1px black solid;
     cursor: pointer;
+    font-size: 24px;
+    text-align: center;
 }
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
