--- a/main.css
+++ b/main.css
@@ -18,10 +18,16 @@ body {
 }
 
 .button {
-    padding: 2px;
+    padding: 4px;
     border: 1px grey solid;
     border-radius: 5px;
     background: lightgray;
     margin: 20px;
     cursor: pointer;
+    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25)
+
+
 }
+.button:hover {
+    background: rgb(187, 185, 185);
+} 
